css removed to correct display on mobile for toggler menu

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,9 +20,10 @@ nav {
 	background-color: #a1a1a1;
 	min-height: 8vh;
 }
+
 .navbar-brand {
-	display: inline-block;
-	margin-left: 25px;
+    display: inline-block;
+    padding-left: 5%;
 	font-size: 1.25rem;
 	line-height: inherit;
 	white-space: nowrap;
@@ -30,6 +31,8 @@ nav {
 	letter-spacing: 2px;
 	white-space: nowrap;
 }
+
+
 
 .navbar {
 	display: flex;
@@ -48,8 +51,8 @@ nav {
 	padding: 1rem;
 	display: block;
 }
+
 .navbar-toggler {
-	position: absolute;
 	top: .75rem;
 	right: 1.5rem;
 	display: flex;
@@ -66,7 +69,7 @@ nav {
 h2 {
 	letter-spacing: 1px;
 	margin: 0px;
-	padding-top: 7px;
+    padding-top: 5px;
 	font-size: 1.2rem;
 }
 .h2,
@@ -130,7 +133,7 @@ h2 {
 
 .carousel {
 	position: relative;
-	padding-top: 5%;
+	padding-top: 25%;
 }
 .h1,
 h1 {
@@ -427,7 +430,7 @@ h5 {
 		margin-right: 0.5rem;
 	}
 	.navbar-toggler {
-		right: 0.5rem;
+        right: 0.50rem;
     }
 	#castle {
 		margin-top: 0px;
